--- a/css-grid-lab/grid-two-col-stacked.html
+++ b/css-grid-lab/grid-two-col-stacked.html
@@ -1,47 +1,87 @@
 <!DOCTYPE html>
 <html lang="en">
-  
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>CSS Grid Demo</title>
-  <style>
-    /* ---------- Box Sizing ---------- */
-    html { box-sizing: border-box; }
-    *, *::before, *::after { box-sizing: inherit; }
 
-    /* ---------- Card styling ---------- */
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>CSS Grid Demo – Two Col Stacked</title>
+  <style>
+    /* ---------------Box Sizing----------------- */
+    html {
+      box-sizing: border-box;
+    }
+
+    *,
+    *:before,
+    *:after {
+      box-sizing: inherit;
+    }
+
+    /* ---------------Base Styles----------------- */
+    body {
+      background-color: #f5f5f5;
+      color: #000;
+      margin: 0;
+      padding: 0;
+    }
+
     main > * {
       font-family: Avenir, Montserrat, Corbel, "URW Gothic", source-sans-pro, sans-serif;
       font-weight: normal;
-      background: #c0c0c0;
+      background-color: #c0c0c0;
       border-radius: 10px;
       padding: 20px;
     }
 
-    /* ---------- Grid layout ---------- */
-    main{
+    main {
       display: grid;
       gap: 20px;
       max-width: 80vw;
       margin: 20px auto;
 
-      /* two columns; aside stacked under the right column */
+      /* two columns, aside stacked under blog */
       grid-template-columns: 1fr 1fr;
       grid-template-areas:
-        "header  header"
+        "header header"
         "content blog"
-        ".       aside"
-        "footer  footer";
+        "content aside"
+        "footer footer";
+      align-items: stretch; /* makes all boxes in a row equal height */
     }
 
-    header.primary { grid-area: header; }
-    #content       { grid-area: content; }
-    #blog          { grid-area: blog; }
-    aside          { grid-area: aside; }
-    footer.primary { grid-area: footer; }
-  </style>
+    header.primary {
+      grid-area: header;
+    }
 
+    #content {
+      grid-area: content;
+    }
+
+    #blog {
+      grid-area: blog;
+    }
+
+    aside {
+      grid-area: aside;
+    }
+
+    footer.primary {
+      grid-area: footer;
+    }
+
+    /* Optional: make it responsive */
+    @media (max-width: 800px) {
+      main {
+        grid-template-columns: 1fr;
+        grid-template-areas:
+          "header"
+          "content"
+          "blog"
+          "aside"
+          "footer";
+      }
+    }
+  </style>
 </head>
 
 <body>
@@ -51,22 +91,31 @@
     </header>
 
     <section id="content">
-      <header><h2>#Content Section Header</h2></header>
-      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus expedita repellendus aliquid iusto consectetur ut velit totam explicabo magnam. Culpa non suscipit doloribus corporis neque.</p>
-      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos inventore quo exercitationem temporibus magni deserunt, quasi repellendus reiciendis? Quos, facere doloribus optio quasi numquam dolore!</p>
+      <header>
+        <h2>#Content Section Header</h2>
+      </header>
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus expedita repellendus aliquid iusto
+        consectetur ut velit totam explicabo magnam. Culpa non suscipit doloribus corporis neque.</p>
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos inventore quo exercitationem temporibus magni
+        deserunt, quasi repellendus reiciendis? Quos, facere doloribus optio quasi numquam dolore!</p>
       <footer>Section Footer</footer>
     </section>
 
     <section id="blog">
-      <header><h2>#Blog Section Header</h2></header>
-      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus expedita repellendus aliquid iusto consectetur ut velit totam explicabo magnam. Culpa non suscipit doloribus corporis neque.</p>
-      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos inventore quo exercitationem temporibus magni deserunt, quasi repellendus reiciendis? Quos, facere doloribus optio quasi numquam dolore!</p>
+      <header>
+        <h2>#Blog Section Header</h2>
+      </header>
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus expedita repellendus aliquid iusto
+        consectetur ut velit totam explicabo magnam. Culpa non suscipit doloribus corporis neque.</p>
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos inventore quo exercitationem temporibus magni
+        deserunt, quasi repellendus reiciendis? Quos, facere doloribus optio quasi numquam dolore!</p>
       <footer>Section Footer</footer>
     </section>
 
     <aside>
       <h2>Aside</h2>
-      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia non eaque dolorum sequi velit molestiae ratione ducimus ipsum excepturi atque.</p>
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia non eaque dolorum sequi velit molestiae
+        ratione ducimus ipsum excepturi atque.</p>
     </aside>
 
     <footer class="primary">Site Footer</footer>
