--- a/css-grid-lab/grid-two-col-equal.html
+++ b/css-grid-lab/grid-two-col-equal.html
@@ -4,9 +4,9 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>CSS Grid Demo</title>
+  <title>CSS Grid Demo – Two Col Equal</title>
   <style>
-    /*  ---------------Box Sizing-----------------  */
+    /* ---------------Box Sizing----------------- */
     html {
       box-sizing: border-box;
     }
@@ -17,24 +17,74 @@
       box-sizing: inherit;
     }
 
-    /* Starter */
-    main>* {
-      font-family: Avenir, Montserrat, Corbel, "URW Gothic", source-sans-pro,
-        sans-serif;
+    /* ---------------Base Styles----------------- */
+    body {
+      background-color: #f5f5f5;
+      color: #000;
+      margin: 0;
+      padding: 0;
+    }
+
+    main > * {
+      font-family: Avenir, Montserrat, Corbel, "URW Gothic", source-sans-pro, sans-serif;
       font-weight: normal;
       background-color: #c0c0c0;
       border-radius: 10px;
       padding: 20px;
     }
 
+    /* ---------------Grid Layout----------------- */
     main {
       display: grid;
       gap: 20px;
       max-width: 80vw;
       margin: 20px auto;
+
+      /* Create two equal columns */
+      grid-template-columns: 1fr 1fr;
+
+      /* Define grid areas */
+      grid-template-areas:
+        "header header"
+        "content blog"
+        "aside aside"
+        "footer footer";
+    }
+
+    header.primary {
+      grid-area: header;
+    }
+
+    #content {
+      grid-area: content;
+    }
+
+    #blog {
+      grid-area: blog;
+    }
+
+    aside {
+      grid-area: aside;
+    }
+
+    footer.primary {
+      grid-area: footer;
+    }
+
+    /* Optional responsiveness */
+    @media (max-width: 800px) {
+      main {
+        grid-template-columns: 1fr;
+        grid-template-areas:
+          "header"
+          "content"
+          "blog"
+          "aside"
+          "footer";
+      }
     }
   </style>
-
+  
 </head>
 
 <body>
@@ -42,28 +92,35 @@
     <header class="primary">
       <h1>Site Header</h1>
     </header>
+
     <section id="content">
       <header>
         <h2>#Content Section Header</h2>
       </header>
-      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus expedita repellendus aliquid iusto consectetur ut velit totam explicabo magnam. Culpa non suscipit doloribus corporis neque.</p>
-      <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos inventore quo exercitationem temporibus magni deserunt, quasi repellendus reiciendis? Quos, facere doloribus optio quasi numquam dolore!</p>
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus expedita repellendus aliquid iusto
+        consectetur ut velit totam explicabo magnam. Culpa non suscipit doloribus corporis neque.</p>
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos inventore quo exercitationem temporibus magni
+        deserunt, quasi repellendus reiciendis? Quos, facere doloribus optio quasi numquam dolore!</p>
       <footer>Section Footer</footer>
     </section>
+
     <section id="blog">
       <header>
         <h2>#Blog Section Header</h2>
       </header>
-      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus expedita repellendus aliquid iusto consectetur ut velit totam explicabo magnam. Culpa non suscipit doloribus corporis neque.</p>
-      <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos inventore quo exercitationem temporibus magni deserunt, quasi repellendus reiciendis? Quos, facere doloribus optio quasi numquam dolore!</p>
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus expedita repellendus aliquid iusto
+        consectetur ut velit totam explicabo magnam. Culpa non suscipit doloribus corporis neque.</p>
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos inventore quo exercitationem temporibus magni
+        deserunt, quasi repellendus reiciendis? Quos, facere doloribus optio quasi numquam dolore!</p>
       <footer>Section Footer</footer>
     </section>
+
     <aside>
       <h2>Aside</h2>
-      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia non eaque dolorum sequi velit molestiae ratione ducimus ipsum excepturi atque.</p>
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia non eaque dolorum sequi velit molestiae ratione
+        ducimus ipsum excepturi atque.</p>
     </aside>
+
     <footer class="primary">Site Footer</footer>
   </main>
 </body>
