--- a/mars-rovers-v2/mission.html
+++ b/mars-rovers-v2/mission.html
@@ -1,18 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="Mars Rover Mission History - Launches, Landings, and Discoveries">
-  <meta name="keywords" content="NASA, Mars Rover, Curiosity, Perseverance, Mission History, Launch, Landing, Jezero Crater, Gale Crater">
-  <meta name="robots" content="noindex">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="description" content="Mars Rover Mission History - Launches, Landings, and Discoveries" />
+  <meta name="keywords" content="NASA, Mars Rover, Curiosity, Perseverance, Mission History, Launch, Landing, Jezero Crater, Gale Crater" />
+  <meta name="robots" content="noindex" />
   <title>NASA Mars Rovers | Mission History</title>
-  <link rel="stylesheet" href="style.css?v=3">
+  <link rel="stylesheet" href="style.css?v=4" />
 </head>
 <body>
   <a class="skip-link" href="#main">Skip to main content</a>
   <header>
-    <img src="images/nasa-logo.png" alt="NASA logo" class="logo">
+    <img src="images/nasa-logo.png" alt="NASA logo" class="logo" />
     <h1>Mission History</h1>
     <nav role="navigation" aria-label="Main Navigation">
       <ul class="nav">
@@ -21,7 +21,7 @@
         <li><a href="faq.html">FAQ</a></li>
       </ul>
     </nav>
-    <button id="toggle-dark">Dark Mode</button>
+    <button id="toggle-dark">🌙 Dark Mode</button>
   </header>
 
   <main id="main">
@@ -33,7 +33,6 @@
         <p><strong>Landing:</strong> August 6, 2012</p>
         <p>Curiosity confirmed that ancient Mars had the conditions necessary to support microbial life. It continues to explore Gale Crater and study Martian rock layers.</p>
       </div>
-
       <div class="event">
         <h3>Perseverance Rover</h3>
         <p><strong>Launch:</strong> July 30, 2020</p>
@@ -56,16 +55,40 @@
         <tr><td>Launch Year</td><td>2011</td><td>2020</td></tr>
         <tr><td>Landing Site</td><td>Gale Crater</td><td>Jezero Crater</td></tr>
         <tr><td>Mass</td><td>899 kg</td><td>1,025 kg</td></tr>
-        <tr><td>Power Source</td><td>RTG (Radioisotope Generator)</td><td>RTG (Radioisotope Generator)</td></tr>
+        <tr><td>Power Source</td><td>RTG</td><td>RTG</td></tr>
       </tbody>
     </table>
   </main>
 
   <footer>
     <p>This website was created as a student project for educational purposes. NASA is not affiliated with or endorsing this work.</p>
-    <p>Contact: <a href="mailto:info@example.com">info@example.com</a></p>
+
+    <form id="contactForm">
+      <h2>Contact Us</h2>
+      <label for="name">Name:</label>
+      <input type="text" id="name" name="name" required />
+
+      <label for="email">Email:</label>
+      <input type="email" id="email" name="email" required />
+
+      <label for="message">Message:</label>
+      <textarea id="message" name="message" rows="4" required></textarea>
+
+      <button type="submit">Send Message</button>
+      <p id="formResponse" class="hidden">Thank you! Your message has been submitted.</p>
+    </form>
   </footer>
 
   <script src="toggle.js"></script>
+  <script>
+    const form = document.getElementById('contactForm');
+    const response = document.getElementById('formResponse');
+    form.addEventListener('submit', e => {
+      e.preventDefault();
+      form.reset();
+      response.classList.remove('hidden');
+      setTimeout(() => response.classList.add('hidden'), 4000);
+    });
+  </script>
 </body>
 </html>
